# llm-dispatcher-test

./: CLAUDE.md  README.md  config.example.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  vad_test_results.json  validation_report.json
.github/workflows/: test.yml
docs/claude/: BASELINE_METRICS.md
docs/claude/planning/: ARCHITECTURE_RECOMMENDATIONS.md  HOME_ASSISTANT_VOICE_ARCHITECTURE.md  IMMEDIATE_VALIDATION_PLAN.md  INITIAL_IMPLEMENTATION_PLAN.md  MYCROFT_ARCHITECTURE_RESEARCH.md  PHASE2_ARCHITECTURE_PROPOSAL.md  PHASE2_PLANNING_SUMMARY.md  PHASE2_SERVICE_VALIDATION_PLAN.md  PROOF_OF_CONCEPT_PLAN.md  RESEARCH_SUMMARY.md  SERVICE_MODE_GAPS.md  VOICE_ASSISTANT_RESEARCH.md  rhasspy_architecture_research.md
docs/claude/prompts/: NEXT_SESSION_PROMPT.md
radio_assistant/: __init__.py  audio_interface.py  callsign_detector.py  main.py  mock_radio.py  ptt_controller.py  transcription_engine.py  vad_detector.py
scripts/: generate_e2e_test_audio.py  generate_response_audio.py  generate_transcription_test_audio.py  generate_tts_audio.py  generate_vad_test_audio.py  run_validation_report.py  test_audio_capture.py  test_transcription.py  test_vad.py  test_vox_trigger.py
tests/: __init__.py
tests/benchmarks/: test_transcription_performance.py
tests/e2e/: test_full_pipeline.py
tests/integration/: __init__.py  test_audio_capture.py  test_callsign_detection_pipeline.py  test_ptt_integration.py  test_transcription_accuracy.py  test_vad_pipeline.py
tests/unit/: __init__.py  test_audio_interface.py  test_callsign_detector.py  test_ptt_controller.py  test_transcription_engine.py  test_vad_detector.py
(+9 files in other folders)
